--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-562-space-dynamic
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>Spac<span>Dyna</span></h4>
+              <h4>SPAN<span>DYAN</span></h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -425,3 +425,4 @@ https://templatemo.com/tm-562-space-dynamic
 </body>
 
 </html>
+
